responsive layout bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -273,6 +273,7 @@ main {
 	.thumbnail1 {
 		width: 40px;
 		height: 40px;
+		border-radius: 3px;
 	}
 	.middle {
 		display: flex;
@@ -477,20 +478,10 @@ main {
 		color: black;
 		opacity: 75%;
 	}
-	.fifty {
-		background-color: var(--Paleorange);
-		color: var(--Orange);
-		padding: 3px;
-		border-radius: 5px;
-		font-size: 12px;
-		font-weight: 600;
-		padding-left: 4px;
-		padding-right: 4px;
-	}
-	.twofivezero {
-		text-decoration: line-through;
-		font-size: 12px;
-		color: var(--Grayishblue);
+	.numbers {
+		display: flex;
+		gap: 5px;
+		padding-top: 5px;
 	}
 	.simbols {
 		display: flex;
@@ -511,13 +502,6 @@ main {
 		padding-bottom: 6px;
 		border-radius: 10px;
 	}
-	.zero {
-		font-weight: 600;
-	}
-	.minus,
-	.plus {
-		cursor: pointer;
-	}
 	.button {
 		display: flex;
 		justify-content: center;
@@ -533,19 +517,7 @@ main {
 		box-shadow: 5px 10px 10px 10px
 			var(--Paleorange);
 		cursor: pointer;
-	}
-	.thumbnail1 {
-		width: 40px;
-		height: 40px;
-	}
-	.middle {
-		display: flex;
-		flex-direction: column;
-	}
-	.numbers {
-		display: flex;
-		gap: 5px;
-		padding-top: 5px;
+		width: 100%;
 	}
 	.basket {
 		display: none;
@@ -569,6 +541,11 @@ main {
 		color: var(--Darkgrayishblue);
 		padding-top: 0;
 		padding-bottom: 5px;
+	}
+	.thumbnail1{
+		width: 45px;
+		height: 45px;
+		border-radius: 3px;
 	}
 	.fall {
 		font-size: 14px;
@@ -659,6 +636,151 @@ main {
 	.simbols2 {
 		padding: 10px;
 	}
+}
+@media only screen and (min-width: 375px) and (min-height:900px) {
+	.avatar {
+		width: 30px;
+		height: 30px;
+	}
+	.logo {
+		width: 110px;
+		height: 2.3vh;
+	}
+	.menu {
+		width: 20px;
+		height: 2vh;
+	}
+	.cart {
+		width: 25px;
+		height: 25px;
+	}
+	.cart-top-result {
+		right: 16%;
+		top: 12%;
+		font-size: 10px;
+	}
+	.bigimage {
+		height: 38vh;
+	}
+	.sectas {
+		top: 25%;
+	}
+	.right {
+		width: 87%;
+	}
+	h1 {
+		font-size: 18px;
+		padding-top: 18px;
+		padding-bottom: 16px;
+	}
+	h2 {
+		font-size: 30px;
+	}
+	.these {
+		font-size: 15px;
+	}
+	.onetwofive {
+		font-size: 30px;
+	}
+	.fifty {
+		font-size: 16px;
+	}
+	.twofivezero {
+		font-size: 16px;
+	}
+	.simbols2 {
+		padding: 12px;
+	}
+	.button {
+		padding: 18px;
+		border-radius: 12px;
+		gap: 14px;
+		font-weight: 700;
+		font-size: 17px;
+	}
+	footer{
+		padding-top: 50px;
+	}
+	.attribution{
+		font-size: 14px;
+	}
+	.menumobile .close{
+		width: 18px;
+		height: 18px;
+	}
+	.menumobile a{
+		font-size: 20px;
+		padding-top: 12px;
+	}
+}
+@media only screen and (min-width:414px){
+	.avatar {
+		width: 30px;
+		height: 30px;
+	}
+	.logo {
+		width: 110px;
+		height: 2.3vh;
+	}
+	.menu {
+		width: 20px;
+		height: 2vh;
+	}
+	.cart {
+		width: 25px;
+		height: 25px;
+	}
+	.cart-top-result {
+		right: 15%;
+		top: 12%;
+		font-size: 11px;
+	}
+	.bigimage {
+		height: 40vh;
+	}
+	.sectas {
+		top: 25%;
+	}
+	h1 {
+		font-size: 18px;
+		padding-top: 18px;
+		padding-bottom: 16px;
+	}
+	h2 {
+		font-size: 30px;
+	}
+	.these {
+		font-size: 17px;
+	}
+	.onetwofive {
+		font-size: 32px;
+	}
+	.fifty {
+		font-size: 18px;
+	}
+	.twofivezero {
+		font-size: 18px;
+	}
+	.simbols2 {
+		padding: 14px;
+	}
+	.zero{
+		font-size: 20px;
+	}
+	.button {
+		padding: 20px;
+		border-radius: 12px;
+		font-size: 18px;
+	}
+	footer{
+		padding-top: 30px;
+	}
+	.attribution{
+		font-size: 16px;
+	}
+}
+@media only screen and (min-width:414px) and (min-height:600px){
+
 }
 @media only screen and (min-width: 425px) {
 	.logo {
